# crux

./: .gitattributes  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  changes.txt  codegen_fixes.patch  crates.js  graphql.config.toml  help.html  highlight.js  index.html  lib.just  motivation.html  overview.html  print.html  release.md  renovate.json  rust-toolchain.toml  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js  test.sh  toc.html  toc.js  update_deps.sh
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
crux_cli/: CHANGELOG.md  Cargo.toml  bindgen.fish  codegen.fish  fixtures-cat_facts-actual.json  fixtures-counter-actual.json  fixtures-notes-actual.json
crux_cli/data/simple/: Cargo.toml
crux_cli/src/: args.rs  codegen.rs  command_runner.rs  config.rs  diff.rs  display.rs  doctor.rs  graph.rs  lib.rs  lsp.rs  lsp_ext.rs  main.rs  manifest.rs  rustdoc_cmd.rs  template.rs  util.rs  workspace.rs
crux_cli/src/bindgen/: cargo_metadata.rs  mod.rs
crux_cli/src/codegen/: README.md  data.rs  filter.rs  filter_tests.rs  format.rs  formatter.rs  generate.rs  generator.rs  graph.rs  indexed.rs  intermediate_public_item.rs  item.rs  logic.rs  (+17 more)
crux_cli/tests/: snapshots.rs
crux_cli/vscode/: package.json  pnpm-lock.yaml
crux_core/: CHANGELOG.md  Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Core.html  struct.Request.html  trait.App.html
crux_core/capability/: index.html  sidebar-items.js  struct.CapabilityContext.html  trait.Capability.html  trait.Operation.html  trait.WithContext.html
crux_core/render/: index.html  sidebar-items.js  struct.Render.html  struct.RenderOperation.html
crux_core/src/: bindgen.rs  bounds.rs  bridge.rs  capability.rs  channels.rs  command.rs  continuations.rs  effect.rs  executor.rs  future.rs  http.rs  key_value.rs  lib.rs  platform.rs  playground.rs  render.rs  sender.rs  steps.rs  stream.rs  testing.rs  time.rs  typegen.rs
crux_core/testing/: index.html  sidebar-items.js  struct.AppTester.html  struct.TestEffect.html  struct.Update.html
crux_core/tests/: capability_orchestration.rs  capability_runtime.rs  effect_router_prototype.rs  effect_test_ext.rs  in_memory_kv.rs  json_bridge.rs  middleware.rs  middleware_overflow.rs  middleware_wasm.rs  middlware.rs  native_bridge.rs  platform_test.rs  testing.rs  typegen.rs
crux_http/: CHANGELOG.md  Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Config.html  struct.Error.html  struct.Http.html  struct.Request.html  struct.RequestBuilder.html  struct.Response.html  struct.ResponseAsync.html  type.Result.html
crux_http/client/: index.html  sidebar-items.js  struct.Client.html
crux_http/error/: struct.Error.html
crux_http/middleware/: index.html  sidebar-items.js  struct.Next.html  struct.Redirect.html  trait.Middleware.html
crux_http/protocol/: index.html  sidebar-items.js  struct.HttpRequest.html  struct.HttpResponse.html
crux_http/src/: body.rs  client.rs  command.rs  compat.rs  config.rs  effect.rs  error.rs  expect.rs  facet_utils.rs  lib.rs  middleware.rs  protocol.rs  request.rs  request_builder.rs  response.rs
crux_http/testing/: index.html  sidebar-items.js  struct.ResponseBuilder.html
crux_http/tests/: capability_with_shell.rs  capability_with_tester.rs  command_with_shell.rs  command_with_tester.rs  http_test.rs  with_shell.rs  with_tester.rs
crux_kv/: CHANGELOG.md  Cargo.toml  README.md  all.html  enum.KeyValueOperation.html  enum.KeyValueOutput.html  index.html  sidebar-items.js  struct.KeyValue.html
crux_kv/src/: command.rs  error.rs  lib.rs  tests.rs  value.rs
crux_kv/tests/: kv_test.rs
crux_macros/: CHANGELOG.md  Cargo.toml  README.md  all.html  derive.Effect.html  index.html  sidebar-items.js
crux_macros/src/: bridge.rs  capability.rs  caps.rs  effect.rs  effect2.rs  effect_derive.rs  export.rs  generate_effect.rs  lib.rs
crux_platform/: CHANGELOG.md  Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Platform.html  struct.PlatformRequest.html  struct.PlatformResponse.html
crux_platform/src/: command.rs  lib.rs  protocol.rs
crux_platform/tests/: platform_test.rs
crux_time/: CHANGELOG.md  Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.Time.html  struct.TimeRequest.html  struct.TimeResponse.html
crux_time/src/: command.rs  duration.rs  error.rs  instant.rs  lib.rs
crux_time/tests/: cancellation.rs  time_test.rs
doctest_support/: CHANGELOG.md  Cargo.toml
doctest_support/src/: basic_delay.rs  delay.rs  lib.rs
examples/bridge_echo/: Cargo.toml  Crux.toml  Justfile  README.md  build.sh
examples/cat_facts/: .cat_facts  Cargo.toml  Crux.toml  Justfile  README.md  rust-toolchain.toml
examples/counter/: .gitignore  Cargo.toml  Crux.toml  Justfile  README.md  typegen.sh
examples/counter-http/: .gitignore  Cargo.toml  Justfile  README.md
examples/counter-next/: .gitignore  Cargo.toml  Justfile  README.md  build.sh  clean.sh  typegen.sh
examples/counter-next-native/: Cargo.toml  Justfile  README.md
examples/hello_world/: Cargo.toml  Crux.toml  Justfile  README.md
examples/notes/: .gitignore  Cargo.toml  Crux.toml  Justfile  README.md
examples/simple_counter/: Cargo.toml  Crux.toml  Justfile
examples/simple_counter_with_windows_shell/: Cargo.toml  README.md
examples/tap_to_pay/: Cargo.toml  Crux.toml  Justfile  README.md  rust-toolchain.toml
examples/weather/: .gitignore  ARCHITECTURE.md  Cargo.toml  Justfile  README.md  clippy.toml  weather-lib.just
examples_support/api_server/: Cargo.toml  Dockerfile  test_cat_urls.fish
rmm/: Cargo.toml
rmm/src/: capability.rs  cmd.rs  continuations.rs  http.rs  key_value.rs  lib.rs  platform.rs  time.rs  typegen.rs
shared/: Cargo.toml  build.rs  shared.udl  uniffi.toml
shared/src/: app.rs  cat_fact.rs  lib.rs  rmm.rs  shared.udl
web/: Cargo.toml  index.html
web/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build.rs  check.rs  clean.rs  format.rs  main.rs  publish.rs  test.rs
(+2012 files in other folders)
