[workspace]
resolver = "3"
members = [
    "crux_cli",
    "crux_core",
    "crux_http",
    "crux_kv",
    "crux_macros",
    "crux_platform",
    "crux_time",
    "doctest_support",
    "examples_support/api_server",
    "xtask",
]

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["cross-platform-ui", "crux", "crux_core", "ffi", "wasm"]

[workspace.dependencies]
anyhow = "1.0.100"
facet = "=0.30"
serde = "1.0.228"
thiserror = "2.0.17"
uniffi = "=0.30.0"
uniffi_bindgen = "=0.30.0"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "unpacked"
