[workspace]
resolver = "3"
members = [
    "crux_core",
    "crux_http",
    "crux_kv",
    "crux_macros",
    "crux_platform",
    "crux_time",
    "doctest_support",
    "examples_support/api_server",
]

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["cross-platform-ui", "crux", "crux_core", "ffi", "wasm"]

[workspace.dependencies]
anyhow = "1.0"
facet = "=0.44"
facet_generate = "0.17"
facet-generate-attrs = "0.17"
# facet_generate = { path = "../facet-generate/crates/facet_generate" }
# facet-generate-attrs = { path = "../facet-generate/crates/facet-generate-attrs" }
serde = "1.0"
thiserror = "2.0"
uniffi = "=0.29.4"
uniffi_bindgen = "=0.29.4"
boltffi = "=0.25.2"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
split-debuginfo = "unpacked"
