[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.12.0", features = ["std", "attributes"] }
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
shared = { path = "../shared" }
surf = "2.3.2"
