[package]
name = "crux_cli"
version = "0.3.0"
description = "Command line tool for crux_core"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino = "1.2"
cargo_metadata = "=0.19"
clap = { version = "4.6", features = ["derive", "env"] }
derive_builder = "0.20"
env_logger = "0.11"
uniffi_bindgen.workspace = true

[dev-dependencies]
