[package]
name = "crux_core"
version = "0.16.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cross-platform app development in Rust"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
bincode = "=1.3.3"
crossbeam-channel = "0.5.15"
crux_cli = { version = "0.2.0", optional = true, path = "../crux_cli" }
crux_macros = { version = "0.7.0", path = "../crux_macros", optional = true }
erased-serde = "0.4"
facet.workspace = true
facet_generate = { version = "0.12.0", optional = true }
futures = "0.3.31"
log = { version = "0.4.28", optional = true }
serde = { workspace = true, features = ["derive"] }
serde-generate = { version = "=0.26.0", optional = true }
serde-reflection = { version = "=0.4.0", optional = true }
serde_json = "1.0.145"
slab = "0.4.11"
thiserror.workspace = true

[dev-dependencies]
assert_fs = "1.1.3"
assert_matches = "1.5"
async-channel = "2.5.0"
crux_http = { path = "../crux_http" }
crux_time = { path = "../crux_time" }
doctest_support = { path = "../doctest_support" }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
static_assertions = "1.1"
tempfile = "3.23.0"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[features]
default = ["crux_macros"]
unsync = []
cli = ["dep:crux_cli"]
facet_typegen = ["crux_macros/facet_typegen", "dep:facet_generate", "dep:log"]
typegen = ["crux_macros/typegen", "dep:serde-generate", "dep:serde-reflection"]

[target.'cfg(target_arch = "wasm32")'.features]
default = ["crux_macros", "unsync"]
