[package]
name = "crux_core"
version = "0.17.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cross-platform app development in Rust"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
bincode = "=1.3.3"
crossbeam-channel = "0.5.15"
crux_cli = { version = "0.2.0-rc2", optional = true, path = "../crux_cli" }
crux_macros = { version = "0.8.0-rc2", path = "../crux_macros", optional = true }
facet.workspace = true
facet_generate = { version = "0.13.1", optional = true }
# facet_generate = { path = "../../facet-generate", optional = true }
futures = "0.3.31"
log = { version = "0.4.29", optional = true }
serde = { workspace = true, features = ["derive"] }
serde-generate = { version = "=0.26.0", optional = true }
serde-reflection = { version = "=0.4.0", optional = true }
serde_json = "1.0.149"
slab = "0.4.11"
thiserror.workspace = true

[dev-dependencies]
assert_fs = "1.1.3"
assert_matches = "1.5"
async-channel = "2.5.0"
crux_http = { path = "../crux_http" }
crux_time = { path = "../crux_time" }
doctest_support = { path = "../doctest_support" }
rand = "0.9"
serde = { workspace = true, features = ["derive"] }
static_assertions = "1.1"
tempfile = "3.24.0"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[features]
default = ["crux_macros"]
cli = ["dep:crux_cli"]
facet_typegen = ["crux_macros/facet_typegen", "dep:facet_generate", "dep:log"]
typegen = ["crux_macros/typegen", "dep:serde-generate", "dep:serde-reflection"]
