[package]
name = "crux_core"
version = "0.19.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cross-platform app development in Rust"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
bincode = "=1.3"
crossbeam-channel = "0.5"
camino = { version = "1.2", optional = true }
cargo_metadata = { version = "=0.19", optional = true }
uniffi_bindgen = { workspace = true, optional = true }
crux_macros = { version = "0.10.0", path = "../crux_macros", optional = true }
facet.workspace = true
facet_generate = { workspace = true, optional = true }
futures = "0.3"
include_dir = { version = "0.7", optional = true }
log = { version = "0.4", optional = true }
serde = { workspace = true, features = ["derive"] }
serde-generate = { version = "=0.26", optional = true }
serde-reflection = { version = "=0.4", optional = true }
serde_json = "1.0"
slab = "0.4"
thiserror.workspace = true

[dev-dependencies]
crux_core = { path = ".", features = ["testing"] }
assert_fs = "1.1.4"
assert_matches = "1.5"
async-channel = "2.5.0"
crux_http = { path = "../crux_http" }
crux_time = { path = "../crux_time" }
doctest_support = { path = "../doctest_support" }
rand = "0.10"
serde = { workspace = true, features = ["derive"] }
static_assertions = "1.1"
tempfile = "3.27.0"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["serde", "v4"] }

[features]
default = ["crux_macros"]
# Deprecated compatibility alias. New binding generation should use BoltFFI directly.
bindgen = ["uniffi_compat_bindgen"]
facet_typegen = ["crux_macros/facet_typegen", "dep:facet_generate", "dep:log"]
testing = []
typegen = [
    "crux_macros/typegen",
    "dep:serde-generate",
    "dep:serde-reflection",
    "dep:include_dir",
]
uniffi_compat_bindgen = [
    "dep:camino",
    "dep:cargo_metadata",
    "dep:uniffi_bindgen",
]
