[package]
name = "crux_http"
description = "HTTP capability for use with crux_core"
version = "0.13.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["encoding"]
# requires web-sys for TextDecoder on wasm
encoding = ["encoding_rs", "web-sys"]
typegen = ["crux_core/typegen"]
http-compat = ["dep:http"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
crux_core = { version = "0.14", path = "../crux_core" }
derive_builder = "0.20.2"
encoding_rs = { version = "0.8.35", optional = true }
futures-util = "0.3"
http-types = { package = "http-types-red-badger-temporary-fork", version = "2.12.0", default-features = false }
pin-project-lite = "0.2.16"
http = { version = "1.3", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
web-sys = { optional = true, version = "0.3.77", features = ["TextDecoder"] }

[dev-dependencies]
assert_fs = "1.1.2"
futures-test = "0.3"
assert_matches = "1.5"
