[package]
name = "crux_http"
description = "HTTP capability for use with crux_core"
version = "0.15.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["encoding"]
# requires web-sys for TextDecoder on wasm
encoding = ["encoding_rs", "web-sys"]
typegen = ["crux_core/typegen"]
facet_typegen = ["crux_core/facet_typegen"]
http-compat = ["dep:http"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
crux_core = { version = "0.16.0", path = "../crux_core" }
derive_builder = "0.20.2"
encoding_rs = { version = "0.8.35", optional = true }
facet.workspace = true
futures-util = "0.3"
http = { version = "1.3", optional = true }
http-types = { package = "http-types-red-badger-temporary-fork", version = "5.0.0", default-features = false }
pin-project-lite = "0.2.16"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.145"
serde_qs = "0.15.0"
thiserror.workspace = true
url = "2.5.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { optional = true, version = "0.3.82", features = ["TextDecoder"] }

[dev-dependencies]
assert_fs = "1.1.3"
futures-test = "0.3"
assert_matches = "1.5"
