[package]
name = "crux_http"
description = "HTTP capability for use with crux_core"
version = "0.18.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["encoding"]
# requires web-sys for TextDecoder on wasm
encoding = ["encoding_rs", "web-sys"]
typegen = ["crux_core/typegen"]
facet_typegen = ["crux_core/facet_typegen"]
# Enable this feature to interoperate with the legacy `http-types` crate.
http-types = ["dep:http-types"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
crux_core = { version = "0.19.0", path = "../crux_core" }
derive_builder = "0.20"
encoding_rs = { version = "0.8", optional = true }
facet.workspace = true
facet-generate-attrs.workspace = true
futures-util = "0.3"
http = "1.4"
http-types = { package = "http-types-red-badger-temporary-fork", version = "6.0", default-features = false, optional = true }
mime = "0.3"
pin-project-lite = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_qs = "1.1"
thiserror.workspace = true
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { optional = true, version = "0.3", features = ["TextDecoder"] }

[dev-dependencies]
assert_fs = "1.1.4"
futures-test = "0.3"
assert_matches = "1.5"
insta = "1.47.2"
crux_core = { version = "0.19.0", path = "../crux_core", features = [
    "testing",
] }
