[package]
name = "crux_kv"
description = "Key-Value capability for use with crux_core"
version = "0.8.0"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
typegen = ["crux_core/typegen"]

[dependencies]
anyhow.workspace = true
crux_core = { version = "0.14", path = "../crux_core" }
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "2.0.12"
