[package]
name = "crux_kv"
version = "0.10.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Key-Value capability for use with crux_core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
crux_core = { version = "0.16.0-rc2", path = "../crux_core" }
facet.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "2.0.12"

[features]
facet_typegen = ["crux_core/facet_typegen"]
typegen = ["crux_core/typegen"]
