[package]
name = "crux_kv"
version = "0.11.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Key-Value capability for use with crux_core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
crux_core = { version = "0.17.0-rc2", path = "../crux_core" }
facet.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.19"
thiserror.workspace = true

[features]
facet_typegen = ["crux_core/facet_typegen"]
typegen = ["crux_core/typegen"]
