[package]
name = "crux_macros"
version = "0.7.0-rc4"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for use with crux_core"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.0"
heck = "0.5.0"
proc-macro2 = "1.0.95"
proc-macro-error = "1.0.4"
quote = "1.0.40"
syn = "2.0.104"

[dev-dependencies]
crux_core = { path = "../crux_core" }
crux_http = { path = "../crux_http" }
facet = { workspace = true }
insta = "1.43.1"
prettyplease = "0.2"
serde = { version = "1.0.219", features = ["derive"] }

[features]
typegen = ["crux_core/typegen"]
facet_typegen = ["crux_core/facet_typegen"]
