[package]
name = "crux_macros"
version = "0.8.0-rc1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for use with crux_core"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
heck = "0.5.0"
proc-macro2 = "1.0.103"
proc-macro-error = "1.0.4"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
crux_core = { path = "../crux_core" }
crux_http = { path = "../crux_http" }
facet = { workspace = true }
insta = "1.44.3"
prettyplease = "0.2"
serde = { version = "1.0.228", features = ["derive"] }

[features]
typegen = ["crux_core/typegen"]
facet_typegen = ["crux_core/facet_typegen"]
