[package]
name = "crux_platform"
description = "Platform capability for use with crux_core"
version = "0.7.0-rc1"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
crux_core = { version = "0.16.0-rc1", path = "../crux_core" }
serde = { workspace = true, features = ["derive"] }
