[package]
name = "crux_platform"
description = "Platform capability for use with crux_core"
version = "0.8.0-rc2"
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
crux_core = { version = "0.17.0-rc2", path = "../crux_core" }
facet.workspace = true
serde = { workspace = true, features = ["derive"] }
