[package]
name = "crux_time"
version = "0.14.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Time capability for use with crux_core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"], optional = true }
crux_core = { version = "0.16.0", path = "../crux_core" }
facet.workspace = true
futures = "0.3.31"
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0.141"

[features]
facet_typegen = ["crux_core/facet_typegen"]
typegen = ["crux_core/typegen"]
