[package]
name = "crux_time"
version = "0.15.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Time capability for use with crux_core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"], optional = true }
crux_core = { version = "0.17.0-rc2", path = "../crux_core" }
facet.workspace = true
futures = "0.3.31"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
serde_json = "1.0.149"

[features]
facet_typegen = ["crux_core/facet_typegen"]
typegen = ["crux_core/typegen"]
