[package]
name = "crux_time"
version = "0.15.0-rc3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Time capability for use with crux_core"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"], optional = true }
crux_core = { version = "0.17.0-rc3", path = "../crux_core" }
facet.workspace = true
futures = "0.3.31"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uniffi = { version = "0.31", optional = true }

[dev-dependencies]
serde_json = "1.0.149"

[features]
facet_typegen = ["crux_core/facet_typegen"]
native_bridge = ["dep:uniffi", "crux_core/native_bridge"]
typegen = ["crux_core/typegen"]
