[package]
name = "doctest_support"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crux_core = { path = "../crux_core", features = ["facet_typegen", "typegen"] }
crux_http = { path = "../crux_http" }
facet.workspace = true
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.143"

[lints]
workspace = true


[features]
default = ["typegen", "facet_typegen"]
typegen = []
facet_typegen = []
