[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[dependencies]
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
uniffi = "0.21.0"
uniffi_macros = "0.21.0"

[build-dependencies]
uniffi_build = { version = "0.21.0", features = ["builtin-bindgen"] }
