[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
gloo-net = { version = "0.2.4", features = ["http"] }
shared = { path = "../shared" }
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Navigator"] }
woothee = "0.13.0"
yew = "0.19.3"
