[package]
publish = false
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.22.0"
clap = { version = "4.5.45", features = ["derive"] }
dialoguer = "0.12.0"
human-repr = "1.1.0"
ignore = "0.4.23"
xshell = "0.2.7"

[lints]
workspace = true
