[package]
publish = false
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.23.0"
clap = { version = "4.5.51", features = ["derive"] }
dialoguer = "0.12.0"
human-repr = "1.1.0"
ignore = "0.4.25"
xshell = "0.2.7"

[lints]
workspace = true
