[workspace]
members = ["shared", "web-leptos"]
resolver = "3"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.88"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
empty_docs = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.102"
crux_core = { path = "../../crux_core" }
crux_http = { path = "../../crux_http" }
# crux_core = "0.17.0"
# crux_http = "0.16.0"
serde = "1.0.228"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
