[workspace]
resolver = "3"
members = ["shared", "web-leptos"]

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["cross-platform-ui", "crux", "crux_core", "ffi", "wasm"]

[workspace.dependencies]
anyhow = "1.0.99"
crux_core = { path = "../../crux_core" }
crux_http = { path = "../../crux_http" }
# crux_core = "0.16.1"
# crux_http = "0.15.0"
serde = "1.0.219"
js-sys = "0.3.77" # FIXME: bring into crux_core, make conditional
