[workspace]
resolver = "3"
members = ["shared", "web-leptos"]

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["cross-platform-ui", "crux", "crux_core", "ffi", "wasm"]

[workspace.dependencies]
anyhow = "1.0.100"
crux_core = { path = "../../crux_core" }
crux_http = { path = "../../crux_http" }
# crux_core = "0.17.0-rc3"
# crux_http = "0.16.0-rc3"
serde = "1.0.228"
js-sys = "0.3.85" # FIXME: bring into crux_core, make conditional
