[workspace]
members = ["shared"]
resolver = "3"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.100"
crux_core = { path = "../../crux_core" }
# crux_core = "0.17.0-rc1"
serde = "1.0.228"
