[workspace]
members = ["shared", "shared_types"]
resolver = "1"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2021"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0"
crux_core = { path = "../../crux_core" }
crux_kv = { path = "../../crux_kv" }
crux_time = { path = "../../crux_time" }
serde = "1.0"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
