[workspace]
members = ["shared"]
resolver = "3"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
# crux_core = { path = "../../crux_core" }
# crux_kv = { path = "../../crux_kv" }
# crux_time = { path = "../../crux_time" }
crux_core = "0.17.0-rc1"
crux_kv = "0.11.0-rc1"
crux_time = "0.15.0-rc1"
serde = "1.0"
