[workspace]
members = ["shared"]
resolver = "3"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.90"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
empty_docs = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0"
crux_core = { path = "../../crux_core" }
crux_kv = { path = "../../crux_kv" }
crux_time = { path = "../../crux_time" }
# crux_core = "0.17.0"
# crux_kv = "0.11.0"
# crux_time = "0.15.0"
serde = "1.0"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
