[workspace]
members = ["shared", "web-dioxus", "web-leptos", "web-yew"]
resolver = "1"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2021"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0.91"
crux_core = "0.10"
serde = "1.0.213"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
cargo-make = { version = "=0.37.14" }
