[workspace]
members = ["shared", "web-dioxus", "web-leptos", "web-yew"]
resolver = "3"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2024"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.100"
crux_core = { path = "../../crux_core" }
# crux_core = "0.17.0-rc3"
serde = "1.0.228"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
